deployment-drawio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drawio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drawio
    spec:
      containers:
      - name: overseer
        image: jgraph/drawio:latest
        ports:
        - containerPort: 8080
          name: http-8080
        volumeMounts:
        - name: config
          mountPath: "/app/config"
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
