service-drawio.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  labels:
    app: drawio
spec:
  clusterIP: None
  selector:
    app: drawio
  ports:
    - port: 8080
      name: http
      targetPort: 8080
